Clean up .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,19 @@
-*
+*.
+*.aux
+*.bbl
+*.fdb_latexmk
+*.fls
+*.gz
+*.log
+*.lz
+*.nav
+*.out
+*.pdf
+*.run.xml
+*.snm
+*.tar
+*.toc
+*.vrb
+
 !.gitignore
-!LICENSE
-!Makefile
-!README.adoc
-!deed-poll-template.tex
-!make-deedpoll
+!.gitattributes
